mod.txt
jaime@jaime-Aspire-E5-473:~/Documentos/UnoGameWithQtSix/QUnoServer$ bash Z.sh 
Generar proyecto para carpeta QUnoServer
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o main.o main.cpp
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o mainwindow.o mainwindow.cpp
mainwindow.cpp: In member function ‘void MainWindow::processClientMessage(QTcpSocket*, const QByteArray&)’:
mainwindow.cpp:110:51: warning: unused parameter ‘clientSocket’ [-Wunused-parameter]
  110 | void MainWindow::processClientMessage(QTcpSocket *clientSocket, const QByteArray &message) {
      |                                       ~~~~~~~~~~~~^~~~~~~~~~~~
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o mazo.o ../QUnoClient/mazo.cpp
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o moc_mainwindow.o moc_mainwindow.cpp
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o moc_mazo.o moc_mazo.cpp
g++ -Wl,-O1 -Wl,-rpath-link,/usr/lib/x86_64-linux-gnu -o QUnoServer  main.o mainwindow.o mazo.o moc_mainwindow.o moc_mazo.o   /usr/lib/x86_64-linux-gnu/libQt6Widgets.so /usr/lib/x86_64-linux-gnu/libQt6Gui.so /usr/lib/x86_64-linux-gnu/libGLX.so /usr/lib/x86_64-linux-gnu/libOpenGL.so /usr/lib/x86_64-linux-gnu/libQt6Network.so /usr/lib/x86_64-linux-gnu/libQt6Core.so -lpthread -lGLX -lOpenGL   
New client connected, awaiting player name...
Received player name: "asdsa"
Invalid card index received: 1634952307
New client connected, awaiting player name...
Received player name: "pep"
Game state successfully sent to client: "::ffff:192.168.0.3"
Game state successfully sent to client: "::ffff:192.168.0.3"
Client disconnected. Remaining clients: 1
Client disconnected. Remaining clients: 0
Attempted to start game with less than 2 players.
Attempted to start game with less than 2 players.
jaime@jaime-Aspire-E5-473:~/Documentos/UnoGameWithQtSix/QUnoServer$ bash Z.sh 
Generar proyecto para carpeta QUnoServer
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o main.o main.cpp
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../QUnoClient -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o mainwindow.o mainwindow.cpp
mainwindow.cpp: In member function ‘void MainWindow::on_readyRead()’:
mainwindow.cpp:84:23: error: ‘socket’ was not declared in this scope
   84 |     QByteArray data = socket->readAll();
      |                       ^~~~~~
mainwindow.cpp:104:9: error: ‘updateGameScreen’ was not declared in this scope
  104 |         updateGameScreen(tablero, hands, turno);
      |         ^~~~~~~~~~~~~~~~
mainwindow.cpp: In member function ‘void MainWindow::processClientMessage(QTcpSocket*, const QByteArray&)’:
mainwindow.cpp:111:51: warning: unused parameter ‘clientSocket’ [-Wunused-parameter]
  111 | void MainWindow::processClientMessage(QTcpSocket *clientSocket, const QByteArray &message) {
      |                                       ~~~~~~~~~~~~^~~~~~~~~~~~
make: *** [Makefile:369: mainwindow.o] Error 1
Z.sh: línea 17: ./QUnoServer: No existe el archivo o el directorio
jaime@jaime-Aspire-E5-473:~/Documentos/UnoGameWithQtSix/QUnoServer$ 


